[package]
name = "weathergov"
version = "0.2.1"
authors = ["Jim Rybarski <jim@rybarski.com>"]
description = "Library that downloads and parses weather information from US government sources"
license = "MIT"
repository = "https://github.com/jimrybarski/weathergov"
readme = "README.md"
keywords = ["weather", "NOAA", "NWS"]

[dependencies]
serde = "1"
serde_derive = "1"
serde-xml-any = "0"
reqwest = { version = "0", features = [ "rustls-tls" ], defailt-features = false }
